<resources>
    <string name="app_name">TicTacTab</string>

    <!-- UI elements -->
    <string name="restart">Restart</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>

    <string name="in_development">In development</string>

    <!-- Navigation -->
    <string name="title_history">History</string>
    <string name="title_settings">Settings</string>
    <string name="title_game">Game</string>
    <string name="title_rules">Rules</string>
    <string name="title_classic">Classic</string>
    <string name="title_complex">Complex</string>

    <string name="game_mode">Choose Game Mode</string>

    <!-- Descriptions -->
    <string name="iv_display_desc" translatable="false">%1$s</string>
        <!-- Cells -->
    <string name="cell_coordinates_0_0">Cell coordinates 0 0</string>
    <string name="cell_coordinates_0_1">Cell coordinates 0 1</string>
    <string name="cell_coordinates_0_2">Cell coordinates 0 2</string>
    <string name="cell_coordinates_1_0">Cell coordinates 1 0</string>
    <string name="cell_coordinates_1_1">Cell coordinates 1 1</string>
    <string name="cell_coordinates_1_2">Cell coordinates 1 2</string>
    <string name="cell_coordinates_2_0">Cell coordinates 2 0</string>
    <string name="cell_coordinates_2_1">Cell coordinates 2 1</string>
    <string name="cell_coordinates_2_2">Cell coordinates 2 2</string>

        <!-- Screenshots -->
    <string name="screenshot_1">screenshot 1</string>

    <string name="screenshot_2_1">screenshot 2.1</string>
    <string name="screenshot_2_2">screenshot 2.2</string>

    <string name="screenshot_3_1">screenshot 3.1</string>
    <string name="screenshot_3_2">screenshot 3.2</string>
    <string name="screenshot_3_3">screenshot 3.3</string>

    <string name="screenshot_4_1">screenshot 4.1</string>
    <string name="screenshot_4_2">screenshot 4.2</string>
    <string name="screenshot_4_3">screenshot 4.3</string>

    <!-- Messages -->
    <string name="winner_message">Winner:</string>
    <string name="current_player_message">Current player: </string>
    <string name="draw_message">Draw! No winner.</string>
    <string name="game_finished_message">The game is already finished!</string>
    <string name="internal_error_message">Some internal error occurred! </string>
    <string name="entity_occupied_message">This %1$s is already occupied! Try another one.</string>
    <string name="cell_var">cell</string>
    <string name="block_var">block</string>
    <string name="block_inactive_message">This block is inactive! Choose active one.</string>
    <string name="mode_changed_confirm_message">If you change game mode, game will be restarted</string>
    <string name="confirm_title_message">Save changes?</string>

    <!-- Settings -->
    <string name="complex_game_mode">Complex Game Mode</string>
    <!-- Complex Game Modes -->
    <string name="complex_mode_0">Classic</string>
    <string name="complex_mode_1">Classic with rollback</string>
    <string name="complex_mode_2">Block-by-Block</string>
    <string name="complex_mode_3">Free mode</string>

    <string name="night_theme">Night theme</string>
    <string name="use_app_night_mode">Use app Night mode</string>

    <!-- Rules -->
    <string name="rules_0">Welcome to TicTacTab!</string>
    <string name="rules_1">\t\tThe app presents several versions of the well-known game that you can switch in settings.
\n\t\tIn addition to the classic version 3 x 3, you can try a complicated variant, in which instead of ordinary cells are blocks of 3 x 3. To win you need the same as usual to fill 3 blocks in a row, and to assign someor block, you have to win on a small field in this block, i.e. put three squares in a row.</string>
    <string name="rules_2">\t\tThe extended version has several game modes:
\n\t\t•Free mode allows you to make a move in any part of the game field;
\n\t\t•Block-by-Block mode, in which the game is played in each block in turn. The first player can go anywhere, but after that one cannot change the block until the game in it has finished.
\n\t\t•Classic mode. In this mode, the rules become somewhat more complex, with the active block changing each turn based on the previous one. The player determines the following block with the coordinates of the cell to which he is going: for example, the player has moved to the right lower cell in the active block, meaning the next player has the right lower block.</string>
    <string name="rules_3">\t\tHowever, with such rules, it may happen that the active player should have already completed the block, then the current player is given a choice among all the open blocks, then the rules go the same.</string>
    <string name="rules_4">\t\t•Classic with rollback mode: Each player determines the following block with the coordinates of the cell they are moving into: for example, the player has moved to the left upper cell in the active block, meaning the next player has the active left upper block.
\n\t\tHowever, unlike the previous mode, the player will not be able to choose any block because the game will determine it. The current player will walk in the last unfinished block in which the game was previously played.</string>
</resources>