<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.rules.RulesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:textSize="32sp"
            android:textAlignment="center"
            style="@style/rules_tv_style"

            android:text="@string/rules_0"/>

        <TextView
            style="@style/rules_tv_style"
            android:text="@string/rules_1"/>
        <FrameLayout
            style="@style/rules_image_style">
            <ImageView
                style="@style/rules_image_style"
                android:src="@drawable/rules_screen_1"

                android:contentDescription="@string/screenshot_1"/>
        </FrameLayout>

        <TextView
            style="@style/rules_tv_style"
            android:text="@string/rules_2"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">

            <ImageView
                style="@style/rules_image_style"
                android:src="@drawable/rules_screen_2_1"

                android:contentDescription="@string/screenshot_2_1"/>

            <ImageView
                style="@style/rules_image_style"
                android:src="@drawable/rules_screen_2_2"

                android:contentDescription="@string/screenshot_2_2"/>

        </LinearLayout>

        <TextView
            style="@style/rules_tv_style"
            android:text="@string/rules_3"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">

            <ImageView
                style="@style/rules_image_style"
                android:src="@drawable/rules_screen_3_1"

                android:contentDescription="@string/screenshot_3_1"/>

            <ImageView
                style="@style/rules_image_style"
                android:src="@drawable/rules_screen_3_2"

                android:contentDescription="@string/screenshot_3_2"/>

            <ImageView
                style="@style/rules_image_style"
                android:src="@drawable/rules_screen_3_3"

                android:contentDescription="@string/screenshot_3_3"/>

        </LinearLayout>

        <TextView
            style="@style/rules_tv_style"
            android:text="@string/rules_4"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">

            <ImageView
                android:src="@drawable/rules_screen_4_1"
                style="@style/rules_image_style"

                android:contentDescription="@string/screenshot_4_1"/>

            <ImageView
                style="@style/rules_image_style"
                android:src="@drawable/rules_screen_4_2"

                android:contentDescription="@string/screenshot_4_2"/>

            <ImageView
                style="@style/rules_image_style"
                android:src="@drawable/rules_screen_4_3"

                android:contentDescription="@string/screenshot_4_3"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>