<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_rules">
    <fragment
        android:id="@+id/navigation_rules"
        android:name="com.livmas.tictactab.ui.rules.RulesFragment"
        android:label="@string/title_rules"
        tools:layout="@layout/fragment_rules" />
    <fragment
        android:id="@+id/navigation_history"
        android:name="com.livmas.tictactab.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.livmas.tictactab.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
    <include app:graph="@navigation/navigation_game" />
</navigation>