<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".ui.fragments.game.main.GameMainFragment"
    android:orientation="vertical"
    android:gravity="center_horizontal">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_mode"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/bStartClassic"
        style="@style/Theme.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/title_classic"/>

    <Button
        android:id="@+id/bStartComplex"
        style="@style/Theme.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_complex"/>

</LinearLayout>