<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.game.sessions.classic.ClassicGameSessionFragment"
    style="@style/game_fragment_theme" >

    <com.livmas.tictactab.ui.views.SquareFrameLayout
        android:id="@+id/flFieldContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="2.5dp">

        <include
            android:id="@+id/field"
            layout="@layout/classic_game_field_layout"/>

    </com.livmas.tictactab.ui.views.SquareFrameLayout>

    <Button
        android:id="@+id/bRestart"
        style="@style/Theme.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/restart"
        app:layout_constraintTop_toBottomOf="@+id/flFieldContainer" />

    <TextView
        android:id="@+id/tvGameDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"

        android:text="@string/current_player_message"/>

    <ImageView
        android:id="@+id/ivGameDisplay"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_x_cell"
        android:contentDescription="@string/iv_display_desc" />
</LinearLayout>